[tool.poetry]
name = "graph-optim"
version = "0.0.1"
description = "Graph Based Optimization Solution Accelerator"
authors = ["Scott McKean <scott.mckean@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.66"
pandas = "^2.2.0"
numpy = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 