[project]
name = "graph-optim"
version = "0.0.1"
description = "Graph Based Optimization Solution Accelerator"
authors = [
    {name = "Scott McKean", email = "scott.mckean@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.66",
    "pandas>=2.2.0",
    "numpy",
]

[project.optional-dependencies]
prod = [
    "langgraph>=0.2.66",
    "pandas>=2.2.0", 
    "numpy",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "ipykernel>=6.29.5",
    "pandas-stubs>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 