[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag"
version = "0.1.0"
description = "Minimal GraphRAG: ingest local docs, extract a knowledge graph, query it with an agent"
authors = [{ name = "Scott McKean", email = "scott.mckean@databricks.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "pdfplumber>=0.11.0",
    "kuzu>=0.11.1",
    "databricks-langchain>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.5.0",
    "mlflow>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0", "isort>=5.13.0"]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
